@@ -1,6 +1,9 @@
 History in reverse order
 ----------------------------------------------------
 
+2010-05-19 14:50 bukind
+ bugfix: processingTasks() is not working in v2: inProcess() is replaced with isActive()
+
 ----------------------------------------------------
 infosme-build-20100416 11:30 bukind
 
